tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:54:
   |
20 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:54:
   |
20 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
   |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:54:
   |
20 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:54:
   |
20 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:20:54:
   |
20 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`))] of int(0..3)
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:22:54:
   |
22 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:22:54:
   |
22 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:22:54:
   |
22 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:22:54:
   |
22 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:22:54:
   |
22 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:23:28:
   |
23 |                            int(1..3)] of int(0..4)
   |                            ^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:25:54:
   |
25 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:25:54:
   |
25 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:25:54:
   |
25 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:25:54:
   |
25 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:25:54:
   |
25 |         matrix indexed by [int(1..undefined(division by zero: 3 / 0 : `int`)),
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/961d1c03df4f6fdf5a4b8bfa8fb85d14/961d1c03df4f6fdf5a4b8bfa8fb85d14.eprime.essence:26:28:
   |
26 |                            int(1..3)] of bool
   |                            ^^^^^^^^^^^^^^^^^^
Skipped tokens
